--- a/Reference.bib
+++ b/Reference.bib
@@ -375,6 +375,7 @@
     booktitle = {ECCV},
     year = {2014},
 }
+
 @inproceedings{xu15,
     author = {Kelvin Xu and Jimmy Ba and Ryan Kiros and Kyunghyun Cho and Aaron C. Courville and Ruslan Salakhutdinov and Richard S. Zemel and Yoshua Bengio},
     title = {Show, Attend and Tell: Neural Image Caption Generation with Visual Attention},
@@ -498,6 +499,14 @@
     journal = {CoRR},
     volume = {abs/1411.5654},
     year = {2014},
+}
+
+@article{mscoco_captions,
+    author = {Xinlei Chen and Hao Fang and Tsung-Yi Lin and Ramakrishna Vedantam and Saurabh Gupta and Piotr Dollar and C. Lawrence Zitnick},
+    title = {Microsoft COCO Captions: Data Collection and Evaluation Server},
+    journal = {CoRR},
+    volume = {abs/1504.00325},
+    year = {2015}
 }
 
 @inproceedings{lebret15,
