--- a/imageqa_nips2015.tex
+++ b/imageqa_nips2015.tex
@@ -277,7 +277,7 @@ other image description dataset, such as Flickr \cite{flickr8k}, SBU
 \cite{ordonez11}, or even the internet. We adopt a conservative approach to
 generating questions in an attempt to create high-quality questions.
 
-\subsubsection{Pre-Processing & Common Strategies}
+\subsubsection{Pre-Processing \& Common Strategies}
 
 We used the Stanford parser \cite{klein03} to obtain the syntatic structure of
 the original image description. We also utilized these strategies for forming
