--- a/imageqa_nips2015.tex
+++ b/imageqa_nips2015.tex
@@ -196,11 +196,12 @@ limited domain of questions that can be answered with one word. We also
 formuate and evaluate a range of other algorithms, that utilize various
 representations drawn from the question and image, on these datasets.
 
-\section{Proposed Methodology} The methodology presented here is two-fold. On
-the model side we develop and apply various forms of neural networks and
-visual-semantic embeddings on this task, and on the dataset side we propose new
-ways of synthesizing QA pairs from currently available image description
-datasets.
+\section{Proposed Methodology}
+
+The methodology presented here is two-fold. On the model side we develop and
+apply various forms of neural networks and visual-semantic embeddings on this
+task, and on the dataset side we propose new ways of synthesizing QA pairs from
+currently available image description datasets.
 
 \subsection{Models}
 
