--- a/Reference.bib
+++ b/Reference.bib
@@ -424,7 +424,7 @@
 }
 
 @book{wordnet,
-    address = {Cambridge, MA ; London},
+    address = {Cambridge, MA; London},
     editor = {Fellbaum, Christiane},
     interhash = {42daa1681607dd1d3f3234c605d84ec3},
     intrahash = {2e282d8bb3aa81b255b179c0772b3bf7},
@@ -562,4 +562,13 @@
     title = {Fisher Vectors Derived from Hybrid Gaussian-Laplacian Mixture Models for Image Annotations},
     booktitle= {CVPR},
     year = {2015},
+}
+
+@article(devlin15,
+    author = {Jacob Devlin and Saurabh Gupta and Ross Girshick and Margaret Mitchell and C. Lawrence Zitnick},
+    title = {Exploring Nearest Neighbor Approaches for Image Captioning},
+    journal = {CoRR},
+    volume = {abs/1505.04467},
+    year = {2015},
+)
 }
