--- a/Reference.bib
+++ b/Reference.bib
@@ -379,7 +379,7 @@
 @inproceedings{xu15,
     author = {Kelvin Xu and Jimmy Ba and Ryan Kiros and Kyunghyun Cho and Aaron C. Courville and Ruslan Salakhutdinov and Richard S. Zemel and Yoshua Bengio},
     title = {Show, Attend and Tell: Neural Image Caption Generation with Visual Attention},
-    booktitle = {ICML (to appear)},
+    booktitle = {ICML},
     year = {2015},
 }
 
@@ -512,7 +512,7 @@
 @inproceedings{lebret15,
     author = {R{\'{e}}mi Lebret and Pedro O. Pinheiro and Ronan Collobert},
     title = {Phrase-based Image Captioning},
-    booktitle = {ICML (to appear)},
+    booktitle = {ICML},
     year = {2015},
 }
 
@@ -564,11 +564,10 @@
     year = {2015},
 }
 
-@article(devlin15,
+@article{devlin15,
     author = {Jacob Devlin and Saurabh Gupta and Ross Girshick and Margaret Mitchell and C. Lawrence Zitnick},
     title = {Exploring Nearest Neighbor Approaches for Image Captioning},
     journal = {CoRR},
     volume = {abs/1505.04467},
     year = {2015},
-)
 }
