--- a/imageqa_nips2015.tex
+++ b/imageqa_nips2015.tex
@@ -51,15 +51,15 @@ also presented.
 Combining image understanding and natural language interaction is one of the
 grand dreams of artificial intelligence. We are interested in the problem of
 jointly learning image and text through a question-answering task. Recently,
-researchers studying image caption generation \cite{vinyals14,kiros14b,
+researchers studying image caption generation~\cite{vinyals14,kiros14b,
 karpathy14,mao14,donahue14,chen14,fang14,xu15,lebret15,klein15} have developed
 powerful methods of jointly learning from image and text inputs to form higher
 level representations from models such as convolutional neural networks (CNNs)
 trained on object recognition, and word embeddings trained on large scale text
-corpora. Image QA involves an extra layer of interation between human and
+corpora. Image QA involves an extra layer of interaction between human and
 computers. Here the model needs to pay attention to details of the image
 instead of describing it in a vague sense. The problem also combines many
-computer vision sub-problems such as image labelling and object detection.
+computer vision sub-problems such as image labeling and object detection.
 
 In this paper we present our contributions to the problem: a generic end-to-end
 QA model using visual semantic embeddings to connect a CNN and a recurrent
@@ -67,6 +67,11 @@ neural net (RNN), as well as comparisons to a suite of other models; an
 automatic question generation algorithm that converts description sentences
 into questions; and a new QA dataset (COCO-QA) that was generated using the
 algorithm, and a number of baseline results on this new dataset.
+
+In this work we assume that the answers consist of only a single word,
+which allows us to treat the problem as a classification problem. This also
+makes the evaluation of the models easier and more robust, avoiding the thorny
+evaluation issues that plague multi-word generation problems.
 
 \begin{figure}
 \centering
@@ -124,25 +129,17 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
 Correct answers are in green and incorrect in red. The numbers in parentheses 
 are the probabilities assigned to the top-ranked answer by the given model. 
 The leftmost example is from the DAQUAR dataset, and the others are from our 
-new COCO-QA datset.}
+new COCO-QA dataset.}
 \label{fig:demo_questions}
 \end{figure}
 
-\section{Problem Formulation}
-
-The inputs of the problem are an image and a question, and the output is an
-answer. In this work we assume that the answers consist of only a single word,
-which allows us to treat the problem as a classification problem. This also
-makes the evaluation of the models easier and more robust, avoiding the thorny
-evaluation issues that plague multi-word generation problems.
-
 \section{Related Work}
 
-Malinowski et al. \cite{malinowski14a} released a dataset with images and
+Malinowski and Fritz~\cite{malinowski14a} released a dataset with images and
 question-answer pairs, the DAtaset for QUestion Answering on Real-world images
-(DAQUAR). All images are from the NYU depth v2 dataset \cite{silberman12}, and
-are taken from indoor scenes. Human segmentations, image depth values, and
-object labellings are available in the dataset. The QA data has two sets of
+(DAQUAR). All images are from the NYU depth v2 dataset~\cite{silberman12}, and
+are taken from indoor scenes. Human segmentation, image depth values, and
+object labeling are available in the dataset. The QA data has two sets of
 configurations, which differ by the number of object classes appearing in the
 questions (37-class and 894-class). There are mainly three types of questions
 in this dataset: object type, object color, and number of objects. Some
@@ -150,51 +147,42 @@ questions are easy but many questions are very hard to answer even for humans.
 Since DAQUAR is the only publicly available image-based QA dataset, it is one
 of our benchmarks to evaluate our models.
 
-Together with the release of the DAQUAR dataset, Malinowski et al. presented an
-approach which combines semantic parsing and image segmentation. In the natural
-language part of their work, they used a semantic parser \cite{liang13} to
-convert sentences into latent logical forms. They obtained multiple
-segmentations of the image by sampling the uncertainty of the segmentation
-algorithm. Lastly they used a Bayesian approach to sample from the nearest
-neighbors in the training set according to the similarity of the predicates.
-
-This approach is notable as one of the first attempts at image QA, but it has a
+Together with the release of the DAQUAR dataset, Malinowski and Fritz presented
+an approach which combines semantic parsing and image segmentation. Their
+approach is notable as one of the first attempts at image QA, but it has a
 number of limitations. First, a human-defined possible set of predicates are
 very dataset-specific. To obtain the predicates, their algorithm also depends
 on the accuracy of the image segmentation algorithm and image depth
-information. Second, before asking any of the questions, their model needs to
-compute all possible spatial relations in the training images. Even though the
-model searches from the nearest neighbors of the test images, it could still be
-an expensive operation in larger datasets. Lastly the accuracy of their model
-is not very strong. We will show later that some simple baselines will perform
-better in terms of plain accuracy.
+information.  Second, their model needs to compute all possible spatial
+relations in the training images. Even though the model searches from the
+nearest neighbors of the test images, it could still be an expensive operation
+in larger datasets.  Lastly the accuracy of their model is not very strong. We
+will show later that some simple baselines will perform better.
 
 Very recently there has been a number of parallel efforts on both creating
-datasets and proposing new models \cite{antol14, malinowski15, gao15, ma15}.
-Both Anto et al. \cite{antol14} and Gao et al. \cite{gao15} used MS-COCO
+datasets and proposing new models~\cite{antol14, malinowski15, gao15, ma15}.
+Both Anto et al.~\cite{antol14} and Gao et al.~\cite{gao15} used MS-COCO
 \cite{mscoco} images and created an open domain dataset with human generated
 questions and answers. In Anto et al.'s work, the authors also included cartoon
 pictures besides real images. Some questions require logical reasoning in order
-to answer correctly.
-
-Both Malinowski et al. \cite{malinowski15} and Gao et al. \cite{gao15} use
-recurrent networks to encode the sentence and output the answer. Whereas
-Malinowski et al. use a single network to handle both encoding and decoding,
-Gao et al. used two networks, a separate encoder and decoder. Lastly, bilingual
-(Chinese and English) versions of the QA dataset are available in Gao et al.'s
-work. Ma et al. \cite{ma15} use convolutional neural networks (CNNs) to both
-extract image features and sentence features, and fuse the features together
-with another multi-modal CNN.
+to answer correctly. Both Malinowski et al.~\cite{malinowski15} and Gao et al.
+\cite{gao15} use recurrent networks to encode the sentence and output the
+answer. Whereas Malinowski et al. use a single network to handle both encoding
+and decoding, Gao et al. used two networks, a separate encoder and decoder.
+Lastly, bilingual (Chinese and English) versions of the QA dataset are
+available in Gao et al.'s work. Ma et al.~\cite{ma15} use CNNs to both extract
+image features and sentence features, and fuse the features together with
+another multi-modal CNN.
 
 Our approach is developed independently from the work above. Similar to the
 work of Malinowski et al. and Gao et al., we also experimented with recurrent
 networks to consume the sequential question input. Unlike Gao et al., we
 formulate the task as a classification problem, as there is no single well-
-accepted metric to evaluate sentence-form answer accuracy.
-\cite{mscoco_captions} competition paper here Thus, we place more focus on a
-limited domain of questions that can be answered with one word. We also
-formuate and evaluate a range of other algorithms, that utilize various
-representations drawn from the question and image, on these datasets.
+accepted metric to evaluate sentence-form answer
+accuracy~\cite{mscoco_captions}. Thus, we place more focus on a limited domain
+of questions that can be answered with one word. We also formulate and evaluate
+a range of other algorithms, that utilize various representations drawn from
+the question and image, on these datasets.
 
 \section{Proposed Methodology}
 
@@ -207,38 +195,34 @@ currently available image description datasets.
 
 In recent years, recurrent neural networks (RNNs) have enjoyed some successes
 in the field of natural language processing (NLP). Long short-term memory
-(LSTM) \cite{hochreiter97} is a form of RNN which is easier to train than
+(LSTM)~\cite{hochreiter97} is a form of RNN which is easier to train than
 standard RNNs because of its linear error propagation and multiplicative
-gatings. There has been increasing interest in using LSTM as encoders and
-decoders on sentence level. Our model builds directly on top of the LSTM
-sentence model and is called the ``VIS+LSTM'' model. It treats the image as one
-word of the question. We borrowed this idea of treating the image as a word
-from caption generation work done by Vinyals et al. \cite{vinyals14}. We will
-compare this newly proposed model with a suite of simpler models in the
-Experimental Results section.
+gatings. Our model builds directly on top of the LSTM sentence model and is
+called the ``VIS+LSTM'' model. It treats the image as one word of the question.
+We borrowed this idea of treating the image as a word from caption generation
+work done by Vinyals et al.~\cite{vinyals14}. We will compare this newly
+proposed model with a suite of simpler models in the Experimental Results
+section.
 
 \begin{enumerate}
 
 \item We use the last hidden layer of the 19-layer Oxford VGG Conv Net
-\cite{simonyan14} trained on ImageNet 2014 Challenge \cite{ilsvrc14} as our
-visual embeddings. The conv-net (CNN) part of our model is kept frozen during
-training.
+\cite{simonyan14} trained on ImageNet 2014 Challenge~\cite{ilsvrc14} as our
+visual embeddings. The CNN part of our model is kept frozen during training.
 
 \item We experimented with several different word embedding models: randomly
 initialized embedding, dataset-specific skip-gram embedding and general-purpose
-skip-gram embedding model \cite{mikolov13}. The word embeddings can either be
-frozen or dynamic (trained with the rest of the model).
+skip-gram embedding model~\cite{mikolov13}. The word embeddings are trained
+with the rest of the model.
 
 \item We then treat the image as if it is the first word of the sentence.
-Similar to DeViSE \cite{frome13}, we use a linear or affine transformation to
+Similar to DeViSE~\cite{frome13}, we use a linear or affine transformation to
 map 4096 dimension image feature vectors to a 300 or 500 dimensional vector
 that matches the dimension of the word embeddings.
 
 \item We can optionally treat the image as the last word of the question as
-well through a different weight matrix.
-
-\item We can optionally add a reverse LSTM, which gets the same content but
-operates in a backward sequential fashion.
+well through a different weight matrix and optionally add a reverse LSTM, which
+gets the same content but operates in a backward sequential fashion.
 
 \item The LSTM(s) outputs are fed into a softmax layer at the last timestep to
 generate answers.
@@ -263,24 +247,24 @@ simply guessing the modes can yield very good accuracy.
 We aim to create another dataset, to produce a much larger number of QA pairs
 and a more even distribution of answers. While collecting human generated QA
 pairs is one possible approach, and another is to synthesize questions based on
-image labellings, we instead propose to automatically convert descriptions into
+image labeling, we instead propose to automatically convert descriptions into
 QA form. In general, objects mentioned in image descriptions are easier to
 notice than the ones in DAQUAR's human generated questions, and than the ones
-in synthetic QAs based on ground truth labellings. This allows the model to
+in synthetic QAs based on ground truth labeling. This allows the model to
 rely more on rough image understanding without any logical reasoning. Lastly
 the conversion process preserves the language variability in the original
 description, and results in more human-like questions than questions generated
-from image labellings.
+from image labeling.
 
 Question generation is still an open-ended topic. As a starting point we used
-the MS-COCO dataset \cite{mscoco}, but the same method can be applied to any
-other image description dataset, such as Flickr \cite{flickr8k}, SBU
+the MS-COCO dataset~\cite{mscoco}, but the same method can be applied to any
+other image description dataset, such as Flickr~\cite{flickr8k}, SBU
 \cite{ordonez11}, or even the internet. We adopt a conservative approach to
 generating questions in an attempt to create high-quality questions.
 
 \subsubsection{Pre-Processing \& Common Strategies}
 
-We used the Stanford parser \cite{klein03} to obtain the syntatic structure of
+We used the Stanford parser~\cite{klein03} to obtain the syntatic structure of
 the original image description. We also utilized these strategies for forming
 the questions.
 
@@ -298,7 +282,7 @@ well as the ``wh-'' constituent to the front of the sentence. For example: ``A
 man is riding a \textbf{horse}'' becomes   ``\textbf{What} is \textbf{the} man
 riding?'' In this work we consider the following two simple constraints: (1)
 A-over-A principle which restricts the movement of a wh-word inside a noun
-phrase (NP) \cite{chomsky73}; (2) Our algorithm does not move any wh-word that
+phrase (NP)~\cite{chomsky73}; (2) Our algorithm does not move any wh-word that
 is contained in a clause constituent.
 
 \end{enumerate}
@@ -315,9 +299,9 @@ following stages: (1) Split long sentences into simple sentences; (2) Change
 indefinite determiners to definite determiners; (3) Traverse the sentence and
 identify potential answers and replace with ``what''. During the traversal of
 object-type question generation, we currently ignore all the prepositional
-phrase (PP) consituents; (4) Perform wh-movement. In order to identify a
-possible answer word, we used WordNet \cite{wordnet} and the NLTK software
-package \cite{nltk} to get noun categories.
+phrase (PP) constituents; (4) Perform wh-movement. In order to identify a
+possible answer word, we used WordNet~\cite{wordnet} and the NLTK software
+package~\cite{nltk} to get noun categories.
 
 \item \textbf{{\it Number} Questions}: We follow a similar procedure as the
 previous algorithm, except for a different way to identify potential answers:
@@ -331,7 +315,7 @@ the [object]'' with the ``object'' replaced by the actual noun.
 
 \item \textbf{{\it Location} Questions}: These are similar to generating object
 questions, except that now the answer traversal will only search within PP
-contituents that start with the preposition ``in''. We also added rules to
+constituents that start with the preposition ``in''. We also added rules to
 filter out clothing so that the answers will mostly be places, scenes, or large
 objects that contain smaller objects.
 
@@ -356,12 +340,13 @@ encourages the model to exploit salient object relations instead of
 exhaustively searching all possible relations. COCO-QA dataset can be
 downloaded at \url{http://www.cs.toronto.edu/~mren/imageqa/data/cocoqa}
 
-Maximum question length is 55, and average is 9.65.  The most common answers
-are ``two'' (3116, 2.65\%), ``white'' (2851, 2.42\%), and ``red'' (2443,
-2.08\%). The least common are ``eagle'' (25, 0.02\%) ``tram'' (25, 0.02\%), and
-``sofa'' (25, 0.02\%).  The median answer is bed (867, 0.737\%).  Across the
-entire test set (38948 QAs), 9072 (23.29\%) overlap in training questions, and
-7284 (18.70\%) overlap in training question-answer pairs.
+Here we provide some brief statistics of the new dataset: maximum question
+length is 55, and average is 9.65.  The most common answers are ``two'' (3116,
+2.65\%), ``white'' (2851, 2.42\%), and ``red'' (2443, 2.08\%). The least common
+are ``eagle'' (25, 0.02\%) ``tram'' (25, 0.02\%), and ``sofa'' (25, 0.02\%).
+The median answer is bed (867, 0.737\%).  Across the entire test set (38948
+QAs), 9072 (23.29\%) overlap in training questions, and 7284 (18.70\%) overlap
+in training question-answer pairs.
 
 \begin{table}
 \caption{COCO-QA question type break-down}
@@ -391,9 +376,9 @@ Total    & 78736 & 100.00\% & 38948 & 100.00\% \\
 
 \begin{enumerate}[leftmargin=*]
 
-\item \#{VIS+LSTM}: The first model is the CNN and LSTM with a dimensionality-
-reduction weight matrix in the middle; we call this ``VIS+LSTM'' in our tables
-and figures.
+\item \#{VIS+LSTM}: The first model is the CNN and LSTM with a
+dimensionality-reduction weight matrix in the middle; we call this ``VIS+LSTM''
+in our tables and figures.
 
 \item \#{2-VIS+BLSTM}: The second model has two image feature inputs, at the
 start and the end of the sentence, with different learned linear
@@ -403,13 +388,16 @@ call the second model ``2-VIS+BLSTM''.
 
 \item \#{IMG+BOW}: This simple model performs multinomial logistic regression
 based on the image features without dimensionality reduction (4096 dimension),
-and a bag-of-word (BOW) vector obtained by summing all the word vectors of the
-question.
+and a bag-of-word (BOW) vector obtained by summing all the learned word vectors
+of the question.
 
 \item \#{FULL}: Lastly, the ``FULL'' model is a simple average of the three
 models above.
 
 \end{enumerate}
+
+We release the complete details of the models at
+\url{https://github.com/renmengye/imageqa-public}.
 
 \subsection{Baselines}
 
@@ -438,7 +426,7 @@ into account the words to narrow down the answer space. However the model does
 not know anything about the question except the type.
 
 \item \#{IMG+PRIOR}: This baseline combines the prior knowledge of an object
-and the image understanding from the "deaf model". For example, a question
+and the image understanding from the ``deaf model''. For example, a question
 asking the color of a white bird flying in the blue sky may output white rather
 than blue simply because the prior probability of the bird being blue is lower.
 We denote $c$ as the color, $o$ as the class of the object of interest, and $x$
@@ -456,31 +444,33 @@ the CNN features alone, and we simply estimate $p(o | c)$ empirically:
 $\hat{p}(o | c) = \frac{count(o, c)}{count(c)}$. We use Laplace smoothing on
 this empirical distribution.
 
-\item \#{K-NN}: In the task of image caption generation, Devlin et al. \cite{devlin15} has 
-shown that a nearest neighbors baseline approach actually performs very well. Here,
-we include experimental results using nearest neighbors; however, different from 
-image caption generation, here the similarity measure includes both image and text. 
-we use the bag-of-words representation learned from IMG+BOW, and append it to the CNN image
-features. We use Euclidean distance of the entire concatenated vector. It is possible to improve
-our nearest neighbor result by more similarity learning.
+\item \#{K-NN}: In the task of image caption generation, Devlin et al.
+\cite{devlin15} showed that a nearest neighbors baseline approach actually
+performs very well. To see whether our model memorizes the training data for
+answering new question, we include a K-NN baseline in the results. Different
+from image caption generation, here the similarity measure includes both image
+and text.  we use the bag-of-words representation learned from IMG+BOW, and
+append it to the CNN image features.  We use Euclidean distance as similarity
+metric. It is possible to improve the nearest neighbor result by more
+sophisticated similarity learning.
 
 \end{enumerate}
 
 
 \subsection{Performance Metrics}
 
-To evaluate model performance, we used the plain answer accuracy as well as
-the Wu-Palmer similarity (WUPS) measure \cite{wu94, malinowski14b}. The WUPS
+To evaluate model performance, we used the plain answer accuracy as well as the
+Wu-Palmer similarity (WUPS) measure~\cite{wu94, malinowski14b}. The WUPS
 calculates the similarity between two words based on their longest common
 subsequence in the taxonomy tree. If the similarity between two words is less
 than a threshold then a score of zero will be given to the candidate answer.
-Following Malinowski et al. \cite{malinowski14b}, we measure all the models in
-terms of accuracy, WUPS 0.9, and WUPS 0.0.
+Following Malinowski and Fritz~\cite{malinowski14b}, we measure all the models
+in terms of accuracy, WUPS 0.9, and WUPS 0.0.
 
 \subsection{Results and Analysis}
 
 Table~\ref{tab:daquar_results} summarizes the learning results on DAQUAR. Here
-we compare our results with \cite{malinowski14b} and \cite{malinowski15}. It
+we compare our results with~\cite{malinowski14b} and~\cite{malinowski15}. It
 should be noted that our result is for the 98.3\% of the reduced dataset with
 single-word answers.
 
@@ -549,7 +539,7 @@ FULL       &\#{0.6108} &\#{0.4766}&   0.5148  &\#{0.5028}\\
 
 From the above results we observe that our model outperforms the baselines and
 the existing approach in terms of answer accuracy and WUPS. Our VIS+LSTM and
-Malinkowski et al.'s recurrent neural network model \cite{malinowski15} achieved
+Malinkowski et al.'s recurrent neural network model~\cite{malinowski15} achieved
 somewhat similar performance on DAQUAR. A simple average of all three models
 further boost the performance by 1-2\%, outperforming other models.
 
@@ -576,48 +566,47 @@ data to train complex models.
 There are many interesting examples but due to space limitations we can only
 show a few in Figure~\ref{fig:demo_questions} and
 Figure~\ref{fig:selected_questions}. Full results are available to view at
-\url{http://www.cs.toronto.edu/~mren/imageqa/results}.
-
-For some of the examples, we specifically tested extra questions (the ones have
-an ``a'' in the question ID); these provide more insight into the models'
-representation of the image and question information, and help elucidate
-questions that our models accidentally got correct. The parentheses in the
-figures represent the confidence score given by the softmax layer of the
-models.
+\url{http://www.cs.toronto.edu/~mren/imageqa/results}.  For some of the
+examples, we specifically tested extra questions (the ones have an ``a'' in the
+question ID); these provide more insight into the models' representation of the
+image and question information, and help elucidate questions that our models
+accidentally got correct. The parentheses in the figures represent the
+confidence score given by the softmax layer of the models.
 
 \textbf{Model Selection}: We did not find that using different word embedding
 has a significant impact on the final classification results. We observed that
 fine-tuning the word embedding results in better performance and normalizing
-the CNN hidden image features into zero-mean and uni-variance help achieve
+the CNN hidden image features into zero-mean and uni-variance helps achieve
 faster training time. The bidirectional LSTM model can further boost the result
 by a little.
  
 \textbf{Object Questions}: As the original CNN was trained for the ImageNet
 challenge, the IMG+BOW benefited largely from its single object recognition
-ability. Usually, the IMG+BOW and VIS+LSTM can easily get the correct answer
-just from the image features. However, the challenging part is to consider
-spatial relations between multiple objects and to focus on details of the
-image. The models only did a moderately acceptable job on it, for instance in
-the first picture of Figure~\ref{fig:number_questions} and the fourth picture of Figure~\ref{fig:selected_questions}. Sometimes it fails
-to make a correct decision but outputs the most salient object, while sometimes
-the blind model can equally guess the most probable objects based on the
-question alone (e.g., chairs should be around the dining table). Nonetheless,
-the FULL model improves accuracy by 50\% compared to IMG model, which shows the
-difference between pure object classification and image question answering.
+ability. However, the challenging part is to consider spatial relations between
+multiple objects and to focus on details of the image. The models only did a
+moderately acceptable job on it, for instance in the first picture of
+Figure~\ref{fig:demo_questions} and the fourth picture of
+Figure~\ref{fig:selected_questions}. Sometimes it fails to make a correct
+decision but outputs the most salient object, while sometimes the blind model
+can equally guess the most probable objects based on the question alone (e.g.,
+chairs should be around the dining table). Nonetheless, the FULL model improves
+accuracy by 50\% compared to IMG model, which shows the difference between pure
+object classification and image question answering.
 
 \textbf{Counting}: In DAQUAR, we could not observe any advantage in the
-counting ability of the VIS+LSTM model compared to other blind baselines. In
-COCO-QA there is some observable counting ability in very clean images with
-single object type. The model can sometimes count up to five or six. However,
-as shown in the second picture of Figure~\ref{fig:selected_questions}, the
-ability is fairly weak as it does not count correctly when different object
-types are present. There is a lot of room for improvement in the counting task,
-and in fact this could be a separate computer vision problem on its own.
+counting ability of the IMG+BOW and the VIS+LSTM model compared to the blind
+baselines. In COCO-QA there is some observable counting ability in very clean
+images with single object type. The model can sometimes count up to five or
+six. However, as shown in the second picture of
+Figure~\ref{fig:selected_questions}, the ability is fairly weak as it does not
+count correctly when different object types are present. There is a lot of room
+for improvement in the counting task, and in fact this could be a separate
+computer vision problem on its own.
 
-\textbf{Color}: In COCO-QA there is a significant win for the VIS+LSTM model
-against the blind models on color-type questions. We further discovered that
-the model is not only able to recognize the dominant color of the image but
-sometimes associate different colors to different objects, as shown in the
+\textbf{Color}: In COCO-QA there is a significant win for the IMG+BOW and the
+VIS+LSTM against the blind ones on color-type questions. We further discovered
+that the model is not only able to recognize the dominant color of the image
+but sometimes associate different colors to different objects, as shown in the
 first picture of Figure~\ref{fig:selected_questions}. However, the model still
 fails on a number of easy examples. Adding prior knowledge provides an
 immediate gain on the ``IMG'' model in terms of accuracy on Color and Number
@@ -716,11 +705,11 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
 
 In this paper, we consider the image QA problem and present our end-to-end
 neural network models. Our model shows a reasonable understanding of the
-question and some coarse image understanding, but it is still very naive in
+question and some coarse image understanding, but it is still very na\"{i}ve in
 many situations. While recurrent networks are becoming a popular choice for
 learning image and text, we show that a simple bag-of-words can perform equally
 well compared to a recurrent network that is borrowed from an image caption
-generation framework \cite{vinyals14}. We proposed a more complete set of
+generation framework~\cite{vinyals14}. We proposed a more complete set of
 baselines which can provide potential insight for developing more sophisticated
 end-to-end image question answering systems. As the currently available dataset
 is not large enough, we designed an algorithm that helps us collect large scale
@@ -739,7 +728,7 @@ questions allow us to study the results more in depth. Lastly, it is also hard
 to interpret why the model outputs a certain answer. By comparing the model to
 some baselines we can roughly infer whether the model understood the image.
 Visual attention is another future direction, which could both improve the
-results (based on recent successes in image captioning \cite{xu15}) as well as
+results (based on recent successes in image captioning~\cite{xu15}) as well as
 help explain the model output by examining the attention output at every
 timestep.
 
