--- a/references.bib
+++ b/references.bib
@@ -35,7 +35,8 @@
 
 @inproceedings{malinowski14b,
     author = {Mateusz Malinowski and Mario Fritz},
-    title = {A Multi-World Approach to Question Answering about Real-World Scenes based on Uncertain Input},
+    title = {A Multi-World Approach to Question Answering about Real-World 
+    Scenes based on Uncertain Input},
     booktitle = {NIPS},
     year = {2014},
 }
@@ -48,7 +49,8 @@
 }
 
 @inproceedings{silberman12,
-    author = {Nathan Silberman and Derek Hoiem and Pushmeet Kohli and Rob Fergus},
+    author = {Nathan Silberman and Derek Hoiem and Pushmeet Kohli and Rob 
+    Fergus},
     title = {Indoor Segmentation and Support Inference from {RGBD} Images},
     booktitle = {ECCV},
     year = {2012},
@@ -56,7 +58,8 @@
 
 @inproceedings{karpathy14,
     author = {Andrej Karpathy and Armand Joulin and Li Fei{-}Fei},
-    title = {Deep Fragment Embeddings for Bidirectional Image Sentence Mapping},
+    title = {Deep Fragment Embeddings for Bidirectional Image Sentence 
+    Mapping},
     booktitle = {NIPS},
     year = {2013},
 }
@@ -70,27 +73,28 @@
 }
 
 @inproceedings{frome13,
-    author = {Andrea Frome and Gregory S. Corrado and Jonathon Shlens and Samy Bengio and Jeffrey Dean and Marc'Aurelio Ranzato and Tomas Mikolov},
-    title = {DeViSE: {A} Deep Visual-Semantic Embedding Model},
+    author = {Andrea Frome and Gregory S. Corrado and Jonathon Shlens and Samy 
+    Bengio and Jeffrey Dean and Marc'Aurelio Ranzato and Tomas Mikolov},
+    title = {{DeViSE}: {A} Deep Visual-Semantic Embedding Model},
     booktitle = {NIPS},
     year = {2013},
 }
 
 @inproceedings{malinowski14a,
     author = {Mateusz Malinowski and Mario Fritz},
-    title = {Towards a Visual Turing Challenge},
+    title = {Towards a Visual {T}uring Challenge},
     booktitle = {NIPS Workshop on Learning Semantics},
     year = {2014},
 }
 
 @article{liang13,
-  author = {Percy Liang and Michael I. Jordan and Dan Klein},
-  title = {Learning Dependency-Based Compositional Semantics},
-  journal = {Computational Linguistics},
-  volume = {39},
-  number = {2},
-  pages = {389--446},
-  year = {2013},
+    author = {Percy Liang and Michael I. Jordan and Dan Klein},
+    title = {Learning Dependency-Based Compositional Semantics},
+    journal = {Computational Linguistics},
+    volume = {39},
+    number = {2},
+    pages = {389--446},
+    year = {2013},
 }
 
 @inproceedings{mnih07,
@@ -101,7 +105,8 @@
 }
 
 @inproceedings{mikolov10,
-    author = {Tomas Mikolov and Martin Karafi{\'{a}}t and Lukas Burget and Jan Cernock{\'{y}} and Sanjeev Khudanpur},
+    author = {Tomas Mikolov and Martin Karafi{\'{a}}t and Lukas Burget and Jan 
+    Cernock{\'{y}} and Sanjeev Khudanpur},
     title = {Recurrent neural network based language model},
     booktitle = {INTERSPEECH},
     pages = {1045--1048},
@@ -110,8 +115,8 @@
 
 @article{dahl12,
     author = {George E. Dahl and Dong Yu and Li Deng and Alex Acero},
-    title = {Context-Dependent Pre-Trained Deep Neural Networks for Large-Vocabulary
-               Speech Recognition},
+    title = {Context-Dependent Pre-Trained Deep Neural Networks for 
+    Large-Vocabulary Speech Recognition},
     journal = {{IEEE} Transactions on Audio, Speech {\&} Language Processing},
     volume = {20},
     number = {1},
@@ -120,8 +125,11 @@
 }
 
 @inproceedings{deng13,
-    author = {Li Deng and Jinyu Li and Jui{-}Ting Huang and Kaisheng Yao and Dong Yu and Frank Seide and  Michael L. Seltzer and Geoffrey Zweig and Xiaodong He and Jason Williams and Yifan Gong and Alex Acero},
-    title = {Recent advances in deep learning for speech research at Microsoft},
+    author = {Li Deng and Jinyu Li and Jui{-}Ting Huang and Kaisheng Yao and 
+    Dong Yu and Frank Seide and  Michael L. Seltzer and Geoffrey Zweig and 
+    Xiaodong He and Jason Williams and Yifan Gong and Alex Acero},
+    title = {Recent advances in deep learning for speech research at 
+    Microsoft},
     booktitle = {ICASSP},
     year = {2013},
 }
@@ -148,8 +156,10 @@
 }
 
 @article{srivastava14,
-    author = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and Ilya Sutskever and Ruslan Salakhutdinov},
-    title = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+    author = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and 
+    Ilya Sutskever and Ruslan Salakhutdinov},
+    title = {Dropout: A Simple Way to Prevent Neural Networks from 
+    Overfitting},
     journal = {Journal of Machine Learning Research},
     year = {2014},
     volume = {15},
@@ -158,7 +168,8 @@
 }
 
 @article{lecun98, 
-    author={Yann Lecun and L\'{e}on Bottou and Yoshua Bengio and Patrick Haffner}, 
+    author={Yann Lecun and L\'{e}on Bottou and Yoshua Bengio and Patrick 
+    Haffner}, 
     journal={Proceedings of the IEEE}, 
     title={Gradient-based learning applied to document recognition}, 
     year={1998}, 
@@ -175,8 +186,10 @@
 }
 
 @inproceedings{girshick14,
-    author = {Ross B. Girshick and Jeff Donahue and  Trevor Darrell and Jitendra Malik},
-    title = {Rich Feature Hierarchies for Accurate Object Detection and Semantic  Segmentation},
+    author = {Ross B. Girshick and Jeff Donahue and  Trevor Darrell and 
+    Jitendra Malik},
+    title = {Rich Feature Hierarchies for Accurate Object Detection and 
+    Semantic  Segmentation},
     booktitle = {CVPR},
     year = {2014},
 }
@@ -193,7 +206,8 @@
 
 @article{mozer95,
     author = {M. C Mozer},
-    title = {A Focused Backpropagation Algorithm for Temporal Pattern Recognition},
+    title = {A Focused Backpropagation Algorithm for Temporal Pattern 
+    Recognition},
     journal = {Complex Systems},
     year = {1995},
 }
@@ -222,7 +236,8 @@
 }
 
 @article{bengio03,
-    author = {Yoshua Bengio and R{\'{e}}jean Ducharme and Pascal Vincent and Christian Janvin},
+    author = {Yoshua Bengio and R{\'{e}}jean Ducharme and Pascal Vincent and 
+    Christian Janvin},
     title = {A Neural Probabilistic Language Model},
     journal = {Journal of Machine Learning Research},
     volume = {3},
@@ -232,7 +247,8 @@
 
 @article{weston10,
     author = {Jason Weston and Samy Bengio and Nicolas Usunier},
-    title = {Large scale image annotation: learning to rank with joint word-image embeddings},
+    title = {Large scale image annotation: learning to rank with joint 
+    word-image embeddings},
     journal = {Machine Learning},
     volume = {81},
     number = {1},
@@ -241,22 +257,28 @@
 }
 
 @inproceedings{kulkarni11,
-    author = {Girish Kulkarni and Visruth Premraj and Sagnik Dhar and Siming Li and Yejin Choi and Alexander C. Berg and Tamara L. Berg},
-    title = {Baby talk: Understanding and generating simple image descriptions},
+    author = {Girish Kulkarni and Visruth Premraj and Sagnik Dhar and Siming Li
+    and Yejin Choi and Alexander C. Berg and Tamara L. Berg},
+    title = {Baby talk: Understanding and generating simple image 
+    descriptions},
     booktitle = {CVPR},
     year = {2011},
 }
 
 @inproceedings{mitchell12,
-    author = {Margaret Mitchell and Jesse Dodge and Amit Goyal and Kota Yamaguchi and Karl Stratos and Xufeng Han and Alyssa Mensch and Alexander C. Berg and Tamara L. Berg and Hal Daum{\'{e}} III},
-    title = {Midge: Generating Image Descriptions From Computer Vision Detections},
+    author = {Margaret Mitchell and Jesse Dodge and Amit Goyal and Kota 
+    Yamaguchi and Karl Stratos and Xufeng Han and Alyssa Mensch and Alexander 
+    C. Berg and Tamara L. Berg and Hal Daum{\'{e}} III},
+    title = {Midge: Generating Image Descriptions From Computer Vision 
+    Detections},
     booktitle = {EACL},
     year = {2012},
 }
 
 @article{kiros14b,
     author = {Ryan Kiros and Ruslan Salakhutdinov and Richard S. Zemel},
-    title = {Unifying Visual-Semantic Embeddings with Multimodal Neural Language Models},
+    title = {Unifying Visual-Semantic Embeddings with Multimodal Neural 
+    Language Models},
     journal = {TACL},
     year = {2015},
 }
@@ -294,7 +316,8 @@
 }
 
 @article{luong14,
-    author = {Thang Luong and Ilya Sutskever and Quoc V. Le and Oriol Vinyals and Wojciech Zaremba},
+    author = {Thang Luong and Ilya Sutskever and Quoc V. Le and Oriol Vinyals 
+    and Wojciech Zaremba},
     title = {Addressing the Rare Word Problem in Neural Machine Translation},
     journal = {CoRR},
     volume = {abs/1410.8206},
@@ -302,7 +325,8 @@
 }
 
 @inproceedings{bleu,
-    author = {Kishore Papineni and Salim Roukos and Todd Ward and Wei-jing Zhu},
+    author = {Kishore Papineni and Salim Roukos and Todd Ward and Wei-jing 
+    Zhu},
     title = {{Bleu: a Method for Automatic Evaluation of Machine Translation}},
     booktitle = {Meeting of the Association for Computational Linguistics},
     year = {2002},
@@ -311,7 +335,8 @@
 
 @inproceedings{pang02,
     author = {Bo Pang and Lillian Lee and Shivakumar Vaithyanathan},
-    title = {Thumbs up?  Sentiment Classification using Machine Learning Techniques},
+    title = {Thumbs up?  Sentiment Classification using Machine Learning 
+    Techniques},
     booktitle = {EMNLP},
     year = 2002
 }
@@ -340,14 +365,17 @@
 }
 
 @inproceedings{socher11,
-    author = {Richard Socher and Jeffrey Pennington and Eric H. Huang and Andrew Y. Ng and Christopher D. Manning},
-    title = {Semi-Supervised Recursive Autoencoders for Predicting Sentiment Distributions},
+    author = {Richard Socher and Jeffrey Pennington and Eric H. Huang and 
+    Andrew Y. Ng and Christopher D. Manning},
+    title = {Semi-Supervised Recursive Autoencoders for Predicting Sentiment 
+    Distributions},
     booktitle = {EMNLP},
     year = {2011},
 }
 
 @inproceedings{vinyals14,
-    author = {Oriol Vinyals and Alexander Toshev and Samy Bengio and Dumitru Erhan},
+    author = {Oriol Vinyals and Alexander Toshev and Samy Bengio and Dumitru 
+    Erhan},
     title = {Show and Tell: {A} Neural Image Caption Generator},
     booktitle = {CVPR},
     year = {2015},
@@ -355,14 +383,16 @@
 
 @inproceedings{simonyan14,
     author = {Karen Simonyan and Andrew Zisserman},
-    title = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+    title = {Very Deep Convolutional Networks for Large-Scale Image 
+    Recognition},
     booktitle = {ICLR},
     year = {2015},
 }
 
 @article{flickr8k,
     author = {Micah Hodosh and Peter Young and Julia Hockenmaier},
-    title = {Framing Image Description as a Ranking Task: Data, Models and Evaluation Metrics},
+    title = {Framing Image Description as a Ranking Task: Data, Models and 
+    Evaluation Metrics},
     journal = {J. Artif. Intell. Res. {(JAIR)}},
     volume = {47},
     pages = {853--899},
@@ -370,15 +400,20 @@
 }
 
 @inproceedings{mscoco,
-    author = {Tsung{-}Yi Lin and Michael Maire and Serge Belongie and James Hays and Pietro Perona and Deva Ramanan and Piotr Doll{\'{a}}r and C. Lawrence Zitnick},
-    title = {Microsoft {COCO:} Common Objects in Context},
+    author = {Tsung{-}Yi Lin and Michael Maire and Serge Belongie and James 
+    Hays and Pietro Perona and Deva Ramanan and Piotr Doll{\'{a}}r and C. 
+    Lawrence Zitnick},
+    title = {Microsoft {COCO:} {C}ommon {O}bjects in {C}ontext},
     booktitle = {ECCV},
     year = {2014},
 }
 
 @inproceedings{xu15,
-    author = {Kelvin Xu and Jimmy Ba and Ryan Kiros and Kyunghyun Cho and Aaron C. Courville and Ruslan Salakhutdinov and Richard S. Zemel and Yoshua Bengio},
-    title = {Show, Attend and Tell: Neural Image Caption Generation with Visual Attention},
+    author = {Kelvin Xu and Jimmy Ba and Ryan Kiros and Kyunghyun Cho and 
+    Aaron C. Courville and Ruslan Salakhutdinov and Richard S. Zemel and 
+    Yoshua Bengio},
+    title = {Show, Attend and Tell: Neural Image Caption Generation with Visual
+    Attention},
     booktitle = {ICML},
     year = {2015},
 }
@@ -391,7 +426,9 @@
 }
 
 @article{caffe,
-    author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
+    author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, 
+    Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and 
+    Darrell, Trevor},
     journal = {arXiv preprint arXiv:1408.5093},
     title = {Caffe: Convolutional Architecture for Fast Feature Embedding},
     year = {2014}
@@ -443,7 +480,10 @@
 }
 
 @article{ilsvrc14,
-    author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael S. Bernstein and Alexander C. Berg and Li Fei{-}Fei},
+    author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and 
+    Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and 
+    Aditya Khosla and Michael S. Bernstein and Alexander C. Berg and Li 
+    Fei{-}Fei},
     title = {ImageNet Large Scale Visual Recognition Challenge},
     journal = {IJCV},
     year = {2015},
@@ -465,45 +505,54 @@
 
 @article{heilman09,
     author= {Michael Heilman and Noah A. Smith},
-    title = {Question Generation via Overgenerating Transformations and Ranking},
+    title = {Question Generation via Overgenerating Transformations and 
+    Ranking},
     year = {2009},
     number = {CMU-LTI-09-013},
-    institution = {Language Technologies Institute, School of Computer Science, Carnegie Mellon University}
+    institution = {Language Technologies Institute, School of Computer Science,
+    Carnegie Mellon University}
 }
 
 @article{karpathyF14,
     author = {Andrej Karpathy and Li Fei{-}Fei},
-    title = {Deep Visual-Semantic Alignments for Generating Image Descriptions},
+    title = {Deep Visual-Semantic Alignments for Generating Image 
+    Descriptions},
     journal = {CoRR},
     volume = {abs/1412.2306},
     year = {2014},
 }
 
 @article{mao14,
-    author = {Junhua Mao and Wei Xu and Yi Yang and Jiang Wang and Alan L. Yuille},
+    author = {Junhua Mao and Wei Xu and Yi Yang and Jiang Wang and Alan L. 
+    Yuille},
     title = {Explain Images with Multimodal Recurrent Neural Networks},
     journal = {NIPS Deep Learning Workshop},
     year = {2014},
 }
 
 @inproceedings{donahue14,
-    author = {Jeff Donahue and Lisa Anne Hendricks and Sergio Guadarrama and Marcus Rohrbach and Subhashini Venugopalan and Kate Saenko and Trevor Darrell},
-    title = {Long-term Recurrent Convolutional Networks for Visual Recognition and Description},
+    author = {Jeff Donahue and Lisa Anne Hendricks and Sergio Guadarrama and 
+    Marcus Rohrbach and Subhashini Venugopalan and Kate Saenko and Trevor 
+    Darrell},
+    title = {Long-term Recurrent Convolutional Networks for Visual Recognition 
+    and Description},
     booktitle = {CVPR},
     year = {2014},
 }
 
 @article{chen14,
     author = {Xinlei Chen and C. Lawrence Zitnick},
-    title = {Learning a Recurrent Visual Representation for Image Caption Generation},
+    title = {Learning a Recurrent Visual Representation for Image Caption 
+    Generation},
     journal = {CoRR},
     volume = {abs/1411.5654},
     year = {2014},
 }
 
 @article{mscoco_captions,
-    author = {Xinlei Chen and Hao Fang and Tsung-Yi Lin and Ramakrishna Vedantam and Saurabh Gupta and Piotr Dollar and C. Lawrence Zitnick},
-    title = {Microsoft COCO Captions: Data Collection and Evaluation Server},
+    author = {Xinlei Chen and Hao Fang and Tsung-Yi Lin and Ramakrishna 
+    Vedantam and Saurabh Gupta and Piotr Dollar and C. Lawrence Zitnick},
+    title = {Microsoft {COCO} Captions: Data Collection and Evaluation Server},
     journal = {CoRR},
     volume = {abs/1504.00325},
     year = {2015}
@@ -517,14 +566,18 @@
 }
 
 @inproceedings{fang14,
-    author = {Hao Fang and Saurabh Gupta and Forrest N. Iandola and Rupesh Srivastava and Li Deng and Piotr Doll{\'{a}}r and Jianfeng Gao and Xiaodong He and Margaret Mitchell and John C. Platt and C. Lawrence Zitnick and Geoffrey Zweig},
+    author = {Hao Fang and Saurabh Gupta and Forrest N. Iandola and Rupesh 
+    Srivastava and Li Deng and Piotr Doll{\'{a}}r and Jianfeng Gao and Xiaodong
+    He and Margaret Mitchell and John C. Platt and C. Lawrence Zitnick and 
+    Geoffrey Zweig},
     title = {From Captions to Visual Concepts and Back},
     booktitle = {CVPR},
     year = {2015},
 }
 
 @article{antol14,
-    author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret Mitchell and Dhruv Batra and C. Lawrence Zitnick and Devi Parikh},
+    author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret 
+    Mitchell and Dhruv Batra and C. Lawrence Zitnick and Devi Parikh},
     title = "{VQA: Visual Question Answering}",
     journal = {CoRR},
     volume = {abs/1505.00468},
@@ -533,7 +586,8 @@
 
 @article{malinowski15,
     author = {Mateusz Malinowski and Marcus Rohrbach and Mario Fritz},
-    title = "{Ask Your Neurons: A Neural-based Approach to Answering Questions about Images}",
+    title = "{Ask Your Neurons: A Neural-based Approach to Answering Questions 
+    about Images}",
     journal = {CoRR},
     archivePrefix = "arXiv",
     volume = {abs/1505.01121},
@@ -541,8 +595,10 @@
 }
 
 @article{gao15,
-    author = {Haoyuan Gao and Junhua Mao and Jie Zhou and Zhiheng Huang and Lei Wang and Wei Xu},
-    title = {Are You Talking to a Machine? Dataset and Methods for Multilingual Image Question Answering},
+    author = {Haoyuan Gao and Junhua Mao and Jie Zhou and Zhiheng Huang and Lei
+    Wang and Wei Xu},
+    title = {Are You Talking to a Machine? Dataset and Methods for Multilingual
+    Image Question Answering},
     journal = {CoRR},
     volume = {abs/1505.05612},
     year = {2015},
@@ -550,7 +606,8 @@
 
 @article{ma15,
     author = {Lin Ma and Zhengdong Lu and Hang Li},
-    title = {Learning to Answer Questions From Image using Convolutional Neural Network},
+    title = {Learning to Answer Questions From Image using Convolutional Neural
+    Network},
     journal = {CoRR},
     volume = {abs/1506.00333},
     year = {2015},
@@ -559,13 +616,15 @@
 @inproceedings{klein15,
     author = {Benjamin Klein and Guy Lev and Gil Lev
     and Lior Wolf},
-    title = {Fisher Vectors Derived from Hybrid Gaussian-Laplacian Mixture Models for Image Annotations},
+    title = {Fisher Vectors Derived from Hybrid {G}aussian-{L}aplacian Mixture
+    Models for Image Annotations},
     booktitle= {CVPR},
     year = {2015},
 }
 
 @article{devlin15,
-    author = {Jacob Devlin and Saurabh Gupta and Ross Girshick and Margaret Mitchell and C. Lawrence Zitnick},
+    author = {Jacob Devlin and Saurabh Gupta and Ross Girshick and Margaret 
+    Mitchell and C. Lawrence Zitnick},
     title = {Exploring Nearest Neighbor Approaches for Image Captioning},
     journal = {CoRR},
     volume = {abs/1505.04467},
